--- a/.local/bin/fonts.html
+++ b/.local/bin/fonts.html
@@ -5014,6 +5014,38 @@
         </p>
     </div>
     <hr/>
+    <div style="font-family: 'Unifont', 'serif'">
+        <h3>Unifont</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'Unifont CSUR', 'serif'">
+        <h3>Unifont CSUR</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'Unifont-JP', 'serif'">
+        <h3>Unifont-JP</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'Unifont Upper', 'serif'">
+        <h3>Unifont Upper</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
     <div style="font-family: 'URW Bookman', 'serif'">
         <h3>URW Bookman</h3>
         <p>
