--- a/.local/bin/fonts.html
+++ b/.local/bin/fonts.html
@@ -4926,6 +4926,38 @@
         </p>
     </div>
     <hr/>
+    <div style="font-family: 'SF Mono', 'serif'">
+        <h3>SF Mono</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'SF Pro Display', 'serif'">
+        <h3>SF Pro Display</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'SF Pro Text', 'serif'">
+        <h3>SF Pro Text</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'siji', 'serif'">
+        <h3>siji</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
     <div style="font-family: 'Source Code Pro', 'serif'">
         <h3>Source Code Pro</h3>
         <p>
