--- a/.local/bin/fonts.html
+++ b/.local/bin/fonts.html
@@ -5094,6 +5094,14 @@
         </p>
     </div>
     <hr/>
+    <div style="font-family: 'Weather Icons', 'serif'">
+        <h3>Weather Icons</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
     <div style="font-family: 'xos4 Terminus', 'serif'">
         <h3>xos4 Terminus</h3>
         <p>
