--- a/.local/bin/fonts.html
+++ b/.local/bin/fonts.html
@@ -6,6 +6,14 @@
 </head>
 <body>
     <hr/>
+    <div style="font-family: 'all-the-icons', 'serif'">
+        <h3>all-the-icons</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
     <div style="font-family: 'Bitstream Vera Sans', 'serif'">
         <h3>Bitstream Vera Sans</h3>
         <p>
@@ -214,6 +222,22 @@
         </p>
     </div>
     <hr/>
+    <div style="font-family: 'file-icons', 'serif'">
+        <h3>file-icons</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'FontAwesome', 'serif'">
+        <h3>FontAwesome</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
     <div style="font-family: 'Font Awesome 5 Brands,Font Awesome 5 Brands Regular', 'serif'">
         <h3>Font Awesome 5 Brands,Font Awesome 5 Brands Regular</h3>
         <p>
@@ -232,6 +256,14 @@
     <hr/>
     <div style="font-family: 'Font Awesome 5 Free,Font Awesome 5 Free Solid', 'serif'">
         <h3>Font Awesome 5 Free,Font Awesome 5 Free Solid</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'github-octicons', 'serif'">
+        <h3>github-octicons</h3>
         <p>
             The quick brown fox jumped over the lazy brown dog<br/>
             0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
@@ -278,8 +310,40 @@
         </p>
     </div>
     <hr/>
+    <div style="font-family: 'Material Icons', 'serif'">
+        <h3>Material Icons</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
     <div style="font-family: 'MesloLGS NF', 'serif'">
         <h3>MesloLGS NF</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'mononoki', 'serif'">
+        <h3>mononoki</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'mononoki Nerd Font', 'serif'">
+        <h3>mononoki Nerd Font</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'mononoki Nerd Font Mono', 'serif'">
+        <h3>mononoki Nerd Font Mono</h3>
         <p>
             The quick brown fox jumped over the lazy brown dog<br/>
             0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
