--- a/.local/bin/fonts.html
+++ b/.local/bin/fonts.html
@@ -230,6 +230,46 @@
         </p>
     </div>
     <hr/>
+    <div style="font-family: 'Fira Code', 'serif'">
+        <h3>Fira Code</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'Fira Code,Fira Code Light', 'serif'">
+        <h3>Fira Code,Fira Code Light</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'Fira Code,Fira Code Medium', 'serif'">
+        <h3>Fira Code,Fira Code Medium</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'Fira Code,Fira Code Retina', 'serif'">
+        <h3>Fira Code,Fira Code Retina</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'Fira Code,Fira Code SemiBold', 'serif'">
+        <h3>Fira Code,Fira Code SemiBold</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
     <div style="font-family: 'FontAwesome', 'serif'">
         <h3>FontAwesome</h3>
         <p>
@@ -5160,6 +5200,14 @@
     <hr/>
     <div style="font-family: 'Weather Icons', 'serif'">
         <h3>Weather Icons</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'xos4 Terminus', 'serif'">
+        <h3>xos4 Terminus</h3>
         <p>
             The quick brown fox jumped over the lazy brown dog<br/>
             0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
