--- a/.local/bin/fonts.html
+++ b/.local/bin/fonts.html
@@ -46,6 +46,22 @@
         </p>
     </div>
     <hr/>
+    <div style="font-family: 'Caladea', 'serif'">
+        <h3>Caladea</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'Calibri', 'serif'">
+        <h3>Calibri</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
     <div style="font-family: 'Cantarell', 'serif'">
         <h3>Cantarell</h3>
         <p>
@@ -72,6 +88,22 @@
     <hr/>
     <div style="font-family: 'Cantarell,Cantarell Thin', 'serif'">
         <h3>Cantarell,Cantarell Thin</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'Carlito', 'serif'">
+        <h3>Carlito</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'Consolas', 'serif'">
+        <h3>Consolas</h3>
         <p>
             The quick brown fox jumped over the lazy brown dog<br/>
             0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
@@ -320,6 +352,102 @@
     <hr/>
     <div style="font-family: 'Icons', 'serif'">
         <h3>Icons</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'JetBrains Mono', 'serif'">
+        <h3>JetBrains Mono</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'JetBrains Mono,JetBrains Mono ExtraBold', 'serif'">
+        <h3>JetBrains Mono,JetBrains Mono ExtraBold</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'JetBrains Mono,JetBrains Mono ExtraLight', 'serif'">
+        <h3>JetBrains Mono,JetBrains Mono ExtraLight</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'JetBrains Mono,JetBrains Mono Light', 'serif'">
+        <h3>JetBrains Mono,JetBrains Mono Light</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'JetBrains Mono,JetBrains Mono Medium', 'serif'">
+        <h3>JetBrains Mono,JetBrains Mono Medium</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'JetBrains Mono,JetBrains Mono Thin', 'serif'">
+        <h3>JetBrains Mono,JetBrains Mono Thin</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'JetBrains Mono NL', 'serif'">
+        <h3>JetBrains Mono NL</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'JetBrains Mono NL,JetBrains Mono NL ExtraBold', 'serif'">
+        <h3>JetBrains Mono NL,JetBrains Mono NL ExtraBold</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'JetBrains Mono NL,JetBrains Mono NL ExtraLight', 'serif'">
+        <h3>JetBrains Mono NL,JetBrains Mono NL ExtraLight</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'JetBrains Mono NL,JetBrains Mono NL Light', 'serif'">
+        <h3>JetBrains Mono NL,JetBrains Mono NL Light</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'JetBrains Mono NL,JetBrains Mono NL Medium', 'serif'">
+        <h3>JetBrains Mono NL,JetBrains Mono NL Medium</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'JetBrains Mono NL,JetBrains Mono NL Thin', 'serif'">
+        <h3>JetBrains Mono NL,JetBrains Mono NL Thin</h3>
         <p>
             The quick brown fox jumped over the lazy brown dog<br/>
             0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
@@ -4968,6 +5096,38 @@
     <hr/>
     <div style="font-family: 'RobotoMono Nerd Font Mono', 'serif'">
         <h3>RobotoMono Nerd Font Mono</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'Segoe UI', 'serif'">
+        <h3>Segoe UI</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'Segoe UI,Segoe UI Light', 'serif'">
+        <h3>Segoe UI,Segoe UI Light</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'Segoe UI,Segoe UI Semibold', 'serif'">
+        <h3>Segoe UI,Segoe UI Semibold</h3>
+        <p>
+            The quick brown fox jumped over the lazy brown dog<br/>
+            0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
+        </p>
+    </div>
+    <hr/>
+    <div style="font-family: 'Segoe UI,Segoe UI Semilight', 'serif'">
+        <h3>Segoe UI,Segoe UI Semilight</h3>
         <p>
             The quick brown fox jumped over the lazy brown dog<br/>
             0123456789,.:;?/<>'"[]{}|\-=`~!@#$%^&*()-=\
